test/corpus/assignment.txt
================================================================================
integer
================================================================================
.PS
foo = 42
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (assignment
      (variable)
      (expr
        (number))))
  (element
    (command_line)))

================================================================================
float
================================================================================
.PS
foo = 42.1
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (assignment
      (variable)
      (expr
        (number))))
  (element
    (command_line)))

================================================================================
dimension
================================================================================
.PS
foo = 42.1i
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (assignment
      (variable)
      (expr
        (number))))
  (element
    (command_line)))

================================================================================
non-local
================================================================================
.PS
foo := 42
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (assignment
      (variable)
      (expr
        (number))))
  (element
    (command_line)))

================================================================================
built-in
================================================================================
.PS
scale = 42
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (assignment
      (variable)
      (expr
        (number))))
  (element
    (command_line)))

================================================================================
expression
================================================================================
.PS
foo = (3 + 4) * 6
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (assignment
      (variable)
      (expr
        (expr
          (expr
            (expr
              (expr
                (number))
            (expr
              (number)))))
        (expr
          (number)))))
  (element
    (command_line)))

================================================================================
function with zero arguments
================================================================================
.PS
rnd = rand()
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (assignment
      (variable)
      (expr
        (function_call
          (name)))))
  (element
    (command_line)))

================================================================================
function with one argument
================================================================================
.PS
root = sqrt(2)
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (assignment
      (variable)
      (expr
        (function_call
          (name)
          (expr
            (number))))))
  (element
    (command_line)))

================================================================================
function with two arguments
================================================================================
.PS
pi = atan2(0, -1)
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (assignment
      (variable)
      (expr
        (function_call
          (name)
          (expr
            (number))
          (expr
            (expr
              (number)))))))
  (element
    (command_line)))

================================================================================
figname
================================================================================
.PS
figname = foo
.PE

--------------------------------------------------------------------------------
(picture
  (element
    (command_line))
  (element
    (assignment
      (variable)
      (macroname)))
  (element
    (command_line)))
